globus-dsi-rest (0.6-2+gt6.@distro@) @distro@; urgency=low

  * Add valgrind hook to tests
  * Change argument to globus_dsi_rest_*_gridftp_op
  * Move GridFTP range handling to DSI's responsibility
  * Fix documentation of globus_dsi_rest_write_block_arg_t
  * Rename packages

 -- Globus Toolkit <support@globus.org>  Wed, 22 Jun 2016 14:17:06 -0400

globus-dsi-rest (0.5-1+gt6.@distro@) @distro@; urgency=low

  * Add more build dependencies
  * Add GLOBUS_HOSTNAME=localhost to test environment
  * Fix non-const initializer
  * Add globus_i_dsi_rest_request_cleanup()
  * Wait for write callbacks to gridftp to arrive before completing request
  * Leak fixes in tests

 -- Globus Toolkit <support@globus.org>  Tue, 21 Jun 2016 17:02:32 -0400

globus-dsi-rest (0.0-1+gt6.@distro@) @distro@; urgency=low

  * Initial packaging

 -- Globus Toolkit <support@globus.org>  Mon, 13 Jun 2016 10:02:03 -0400