@@ -14,7 +14,7 @@ Description: Globus DSI REST Helper API
 
 Package: libglobus-dsi-rest-dev
 Architecture: any
-Depends: libglobus-dsi-rest0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
+Depends: libglobus-dsi-rest0 (= ${binary:Version}), libjansson-dev, ${shlibs:Depends}, ${misc:Depends}
 Description: Globus DSI REST Helper API Development Files
 
 Package: globus-dsi-rest-doc
