@@ -1,10 +1,11 @@
-globus-dsi-rest (0.6-2+gt6.@distro@) @distro@; urgency=low
+globus-dsi-rest (0.7-1+gt6.@distro@) @distro@; urgency=low
 
   * Add valgrind hook to tests
   * Change argument to globus_dsi_rest_*_gridftp_op
   * Move GridFTP range handling to DSI's responsibility
   * Fix documentation of globus_dsi_rest_write_block_arg_t
   * Rename packages
+  * Add jansson-dev dependency to -dev package
 
  -- Globus Toolkit <support@globus.org>  Wed, 22 Jun 2016 14:17:06 -0400
 
